--- a/index.ipynb
+++ b/index.ipynb
@@ -110,20 +110,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-34.6037"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ba_latitude = coordinates[0]"
+    "ba_latitude = coordinates[0]\n",
+    "ba_latitude"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = coordinates[1]"
+    "ba_longitude = coordinates[1]\n",
+    "ba_longitude"
    ]
   },
   {
