Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -410,11 +410,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7fb63c7f60f0>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "la_boca_marker = neighborhood_markers[-1]"
+    "la_boca_marker = neighborhood_markers[-1]\n",
+    "la_boca_marker"
    ]
   },
   {
